tests/negative/regression/r24.orng
// r24.orng:6:14: error: error: expected a compile-time constant type, got sum_type
//     let x: ?{Int}
//             ^
// 
fn main() -> Int {
    let x: ?{Int}
    4
}